@@ -1,6 +1,12 @@
+2010-01-16  David Bateman  <dbateman@free.fr>
+
+	* plot/__go_draw_axes__.m (next_marker):  New function to find a
+	new marker. Use it to support the "@" marker.
+	* plot/private/__pltopt__.m: Don't convert "@" marker ro "+";
+
 2010-01-15  David Bateman  <dbateman@free.fr>
 
-	plot/__go_draw_figure__.m: Respect the figure and axes color 
+	plot/__go_draw_figure__.m: Respect the figure and axes color
 	properties.
 
 2010-01-14  David Bateman  <dbateman@free.fr>
@@ -29,7 +35,7 @@
 
 2010-01-12  David Bateman  <dbateman@free.fr>
 
-	* plot/__go_draw_axes_.m:  Allow patch markerfacecolor and 
+	* plot/__go_draw_axes_.m:  Allow patch markerfacecolor and
 	markeredgecolor properties to be used and set the marker colors
 	appropriately.
 
